--- a/DummyApp/src/main/res/layout/content_dummy.xml
+++ b/DummyApp/src/main/res/layout/content_dummy.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="es.ulpgc.eite.clean.mvp.sample.dummy.DummyView"
-    tools:showIn="@layout/activity_dummy">
+    tools:showIn="@layout/activity_main">
 
 
     <LinearLayout
