Creando los metodos y parametros necesarios para fijar el texto de la pantalla principal

--- a/DummyApp/src/main/res/layout/content_main.xml
+++ b/DummyApp/src/main/res/layout/content_main.xml
@@ -18,10 +18,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/screen_text"
+        android:text="Text"
         android:id="@+id/mainText"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"/>
 
     <Spinner
         android:layout_width="wrap_content"
