--- a/DummyApp/src/main/res/values/colors.xml
+++ b/DummyApp/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#FF5722</color>
+    <color name="colorPrimary">#D32F2F</color>
+    <color name="colorPrimaryDark">#B71C1C</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorText">#FFFFFF</color>
 </resources>
