--- a/DummyApp/src/main/res/layout/content_main.xml
+++ b/DummyApp/src/main/res/layout/content_main.xml
@@ -16,44 +16,46 @@
 
 
     <TextView
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Text"
-        android:id="@+id/mainText"
+        android:id="@+id/mainTitle"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"/>
+        android:paddingTop="10dp"
+        android:text="Text"
+        android:textStyle="bold"/>
 
-    <Spinner
-        android:layout_width="wrap_content"
+    <TextView
+
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/mainText"
-        android:layout_alignStart="@+id/mainText"
-        android:layout_alignEnd="@+id/mainText" />
+        android:id="@+id/mainText"
+        android:layout_below="@id/mainTitle"
+        android:text="Text"
+        android:layout_marginTop="5dp"
+        />
 
     <Button
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
         android:id="@+id/searchButton"
-        android:background="@color/colorPrimary"
+        android:layout_below="@id/mainText"
+        android:text="Button"
+        android:layout_centerHorizontal="true"
         android:textColor="@color/colorText"
-        android:layout_marginBottom="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="40dp"
+        android:textStyle="bold"/>
 
     <ImageView
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:id="@+id/mainImage"
         android:src="@drawable/sec"
-        android:layout_marginTop="60dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_above="@+id/mainText"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@id/mainTitle"/>
+
+
 </RelativeLayout>
