--- a/DummyApp/src/main/res/values/dimens.xml
+++ b/DummyApp/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="title_image_separation">10dp</dimen>
+    <dimen name="description_title_separation">5dp</dimen>
+    <dimen name="search_button_margingTop">40dp</dimen>
 </resources>
