--- a/DummyApp/src/main/res/layout/content_filter.xml
+++ b/DummyApp/src/main/res/layout/content_filter.xml
@@ -14,6 +14,40 @@
     tools:context="es.ulpgc.eite.clean.mvp.sample.filter.FilterView"
     tools:showIn="@layout/activity_filter">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Text"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Text"/>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></Spinner>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Text"/>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></Spinner>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="@dimen/fab_margin"
+        android:layout_height="@dimen/fab_margin"/>
+
+    </LinearLayout>
+
 
 
 
