--- a/DummyApp/src/main/res/layout/content_main.xml
+++ b/DummyApp/src/main/res/layout/content_main.xml
@@ -40,7 +40,7 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/searchButton"
+        android:id="@+id/intoButton"
         android:layout_below="@id/mainText"
         android:text="Button"
         android:layout_centerHorizontal="true"
