--- a/DummyApp/src/main/res/layout/content_filter.xml
+++ b/DummyApp/src/main/res/layout/content_filter.xml
@@ -22,25 +22,30 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/filterText"
         android:text="Text"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/islandLabel"
         android:text="Text"/>
 
     <Spinner
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></Spinner>
+        android:layout_height="wrap_content"
+        android:id="@+id/islandSpinner"></Spinner>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/sportLabel"
         android:text="Text"/>
 
     <Spinner
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></Spinner>
+        android:layout_height="wrap_content"
+        android:id="@+id/sportSpinner"></Spinner>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="@dimen/fab_margin"
