--- a/DummyApp/src/main/res/layout/content_filter.xml
+++ b/DummyApp/src/main/res/layout/content_filter.xml
@@ -34,7 +34,9 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/islandSpinner"></Spinner>
+        android:id="@+id/islandSpinner"
+        android:drawSelectorOnTop="true"
+        android:entries="@array/islands"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,7 +47,9 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/sportSpinner"></Spinner>
+        android:id="@+id/sportSpinner"
+        android:drawSelectorOnTop="true"
+        android:entries="@array/sports"></Spinner>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="@dimen/fab_margin"
