--- a/DummyApp/src/main/res/layout/content_main.xml
+++ b/DummyApp/src/main/res/layout/content_main.xml
@@ -22,7 +22,7 @@
         android:id="@+id/mainTitle"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:paddingTop="@dimen/title_image_separation"
+        android:paddingTop="@dimen/normal_separation"
         android:text="Text"
         android:textStyle="bold"/>
 
@@ -33,7 +33,7 @@
         android:id="@+id/mainText"
         android:layout_below="@id/mainTitle"
         android:text="Text"
-        android:layout_marginTop="@dimen/description_title_separation"
+        android:layout_marginTop="@dimen/small_separation"
         />
 
     <Button
@@ -46,7 +46,7 @@
         android:layout_centerHorizontal="true"
         android:textColor="@color/colorText"
         android:background="@color/colorPrimary"
-        android:layout_marginTop="@dimen/search_button_margingTop"
+        android:layout_marginTop="@dimen/big_separation"
         android:textStyle="bold"/>
 
     <ImageView
