--- a/DummyApp/src/main/res/values/colors.xml
+++ b/DummyApp/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#D32F2F</color>
     <color name="colorPrimaryDark">#B71C1C</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#D32F2F</color>
     <color name="colorText">#FFFFFF</color>
 </resources>
