--- a/DummyApp/src/main/res/layout/content_main.xml
+++ b/DummyApp/src/main/res/layout/content_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -56,6 +57,5 @@
         android:id="@+id/mainImage"
         android:src="@drawable/sec"
         android:layout_above="@id/mainTitle"/>
-
 
 </RelativeLayout>
