--- a/DummyApp/src/main/res/layout/content_filter.xml
+++ b/DummyApp/src/main/res/layout/content_filter.xml
@@ -30,6 +30,33 @@
         android:layout_above="@id/filterText"
         android:layout_marginTop="@dimen/image_top"/>
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sportSpinner"
+        android:layout_marginTop="@dimen/normal_separation"
+        android:drawSelectorOnTop="true"
+        android:entries="@array/sports"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/normal_separation">
+
+    </Spinner>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sportLabel"
+        android:text="Text"
+        android:layout_marginTop="@dimen/normal_separation"
+        android:textStyle="bold"
+        android:layout_above="@id/sportSpinner"/>
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/islandSpinner"
+        android:drawSelectorOnTop="true"
+        android:entries="@array/islands"
+        android:layout_marginTop="@dimen/normal_separation"
+        android:layout_above="@id/sportLabel"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,49 +64,19 @@
         android:text="Text"
         android:textStyle="bold"
         android:layout_marginTop="@dimen/normal_separation"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/filterText"/>
+        android:layout_above="@+id/islandSpinner"/>
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/islandSpinner"
-        android:drawSelectorOnTop="true"
-        android:entries="@array/islands"
-        android:layout_marginTop="@dimen/small_separation"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/islandLabel"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sportLabel"
-        android:text="Text"
-        android:layout_marginTop="@dimen/normal_separation"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold"
-        android:layout_below="@id/islandSpinner"/>
-
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sportSpinner"
-        android:layout_marginTop="@dimen/small_separation"
-        android:layout_alignStart="@+id/islandSpinner"
-        android:drawSelectorOnTop="true"
-        android:entries="@array/sports"
-        android:layout_below="@id/sportLabel"></Spinner>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="@dimen/fab_margin"
         android:layout_height="@dimen/fab_margin"
-        android:layout_below="@id/sportSpinner"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/normal_separation"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         app:backgroundTint="@color/colorPrimaryDark"
         app:elevation="6dp"
         app:borderWidth="0dp"
         android:src="@drawable/ic_search_white_24dp"
+        android:layout_marginBottom="@dimen/normal_separation"
         />
 
 
