--- a/DummyApp/src/main/res/menu/menu_filter_screen.xml
+++ b/DummyApp/src/main/res/menu/menu_filter_screen.xml
@@ -1,10 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="es.ulpgc.eite.clean.mvp.sample.dummy.DummyView">
+      tools:context="es.ulpgc.eite.clean.mvp.sample.main.MainView">
+
+    <item
+        android:id="@+id/home"
+        android:orderInCategory="100"
+        android:title="@string/home"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+
+
 </menu>
