--- a/DummyApp/src/main/res/layout/content_main.xml
+++ b/DummyApp/src/main/res/layout/content_main.xml
@@ -25,6 +25,8 @@
         android:layout_centerHorizontal="true"
         android:paddingTop="@dimen/normal_separation"
         android:text="Text"
+        android:textColor="@color/colorPrimary"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textStyle="bold"/>
 
     <TextView
