--- a/DummyApp/src/main/res/layout/content_filter.xml
+++ b/DummyApp/src/main/res/layout/content_filter.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/filterImage"
-        android:src="@drawable/filter_screen"
+        android:src="@drawable/sec"
         android:layout_above="@id/filterText"
         android:layout_marginTop="@dimen/image_top"/>
 
@@ -38,7 +38,7 @@
         android:drawSelectorOnTop="true"
         android:entries="@array/sports"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/normal_separation">
+        android:layout_marginBottom="@dimen/spinner_margingBottom">
 
     </Spinner>
     <TextView
@@ -46,6 +46,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/sportLabel"
         android:text="Text"
+        android:textColor="@color/colorPrimary"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:layout_marginTop="@dimen/normal_separation"
         android:textStyle="bold"
         android:layout_above="@id/sportSpinner"/>
@@ -62,6 +64,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/islandLabel"
         android:text="Text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:layout_marginTop="@dimen/normal_separation"
         android:layout_above="@+id/islandSpinner"/>
