--- a/DummyApp/src/main/res/values/dimens.xml
+++ b/DummyApp/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="small_separation">5dp</dimen>
     <dimen name="big_separation">40dp</dimen>
     <dimen name="image_top">20dp</dimen>
+    <dimen name="spinner_margingBottom">20dp</dimen>
 </resources>
