--- a/DummyApp/src/main/res/values/dimens.xml
+++ b/DummyApp/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="big_separation">40dp</dimen>
     <dimen name="image_top">20dp</dimen>
     <dimen name="spinner_margingBottom">20dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
 </resources>
