--- a/DummyApp/src/main/res/layout/item_list_content.xml
+++ b/DummyApp/src/main/res/layout/item_list_content.xml
@@ -14,7 +14,7 @@
     -->
 
     <TextView
-        android:id="@+id/item_title"
+        android:id="@+id/item_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
